[package]
name = "demo_webrtc"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renet = { path = "../renet" }
renet_visualizer = { path = "../renet_visualizer" }
eframe = "0.22"
serde = { version = "1.0", features = [ "derive" ] } 
bincode = "1.3.1"
log = { version = "0.4.11", features = [ "std" ] }
env_logger = "0.10.0"
webrtc-unreliable = {version = "0.5.3"}
webrtc = "0.8.0"
clap = "3.0"
futures = { version = "0.3" }
hyper = { version = "0.14", features = ["http1", "runtime", "server", "stream"] }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
reqwest = "0.11.18"
tinyjson = "2.5.1"
regex = "1.9.1"
bytes = "1.4.0"
serde_json = "1.0"
base64 = "0.21.2"
