[package]
name = "renet"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
description = "Server/Client network library for multiplayer games with authentication and connection management"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lucaspoffo/renet"
version = "0.0.13"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bevy = ["dep:bevy_ecs"]
default = ["transport"]
transport = ["dep:renetcode"]
transport_webrtc = ["dep:renetcode", "str0m"]

[dependencies]
bevy_ecs = { version = "0.11", optional = true }
bytes = "1.1"
log = "0.4.17"
octets = "0.2"
renetcode = { path = "../renetcode", version = "0.0.9", optional = true }
str0m = { git = "https://github.com/biceneutron/str0m.git", branch = "test/add-log", optional = true }


[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0.102", features = ["derive"] }
rouille = { version = "3.5.0", features = ["ssl"] }
rand = "0.8.5"
reqwest = "0.11.18"
